--- a/.github/workflows/build-and-test-and-deploy.yml
+++ b/.github/workflows/build-and-test-and-deploy.yml
@@ -1,5 +1,8 @@
 # Runs build and test
-name: CI
+name: Deploy
+
+permissions:
+  contents: write
 
 on:
   push:
@@ -21,5 +24,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: npm install
       - run: npm run build-ci
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }} 
+          publish_dir: _site
